--- a/style.css
+++ b/style.css
@@ -279,6 +279,8 @@ select {
   box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
     rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
   cursor: pointer;
+  overflow: hidden;
+  color: var(--main-fontColor);
 }
 
 select:focus {
