--- a/style.css
+++ b/style.css
@@ -35,8 +35,11 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: var(--main-fontColor);
   display: flex;
+  flex-direction: column;
   margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -45,6 +48,8 @@ h1 {
 
 a {
   font-size: 1rem;
+  text-decoration: none;
+  margin: 0rem 0.5rem;
 }
 
 i {
@@ -57,6 +62,14 @@ i:hover {
   color: white;
 }
 
+
+/* footer */
+
+footer {
+  margin-top: 1rem;
+}
+
+
 .container {
   width: 50.625rem;
   margin: auto;
@@ -67,6 +80,7 @@ i:hover {
   justify-content: center;
   flex-wrap: wrap;
   min-height: 34.375rem;
+  margin-bottom: 2rem;
 }
 
 .upperDiv {
